--- a/Flutter/website/pubspec.yaml
+++ b/Flutter/website/pubspec.yaml
@@ -54,21 +54,30 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
   assets:
     - images/home_page.jpg
     - images/logo1.png
-
-
+    - images/steak.jpg
+    - images/test.jpg
+    - images/rfgg.png
+    - images/hi.jpeg
+    - images/hii.jpeg
+    - images/crab.png
+    - images/burrito.png
+    - images/fish.png
+    - images/turkey.png
+    - images/salmon.png
     - assets/rfg_data_zero.json
     - assets/sorted_distances.json
-  #   - images/a_dot_ham.jpeg
+
+  fonts:
+    - family: Rufina
+      fonts:
+        - asset: assets/fonts/Rufina-Regular.ttf
+        - asset: assets/fonts/Rufina-Bold.ttf
+          weight: 700
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
