--- a/Flutter/website/pubspec.yaml
+++ b/Flutter/website/pubspec.yaml
@@ -60,6 +60,7 @@ flutter:
     - images/home_page.jpg
     - images/logo1.png
     - images/steak.jpg
+    - images/logo.png
     - images/test.jpg
     - images/rfgg.png
     - images/hi.jpeg
