--- a/Flutter/website/pubspec.yaml
+++ b/Flutter/website/pubspec.yaml
@@ -61,6 +61,8 @@ flutter:
     - images/logo1.png
     - images/steak.jpg
     - images/logo.png
+    - images/mind.png
+    - images/gym.png
     - images/home_line.png
     - images/nutrition.png
     - images/test.jpg
