--- a/Flutter/website/pubspec.yaml
+++ b/Flutter/website/pubspec.yaml
@@ -65,9 +65,14 @@ flutter:
     - images/gym.png
     - images/follow.png
     - images/instagram.png
+    - images/Instagram_2.png
+    - images/Facebook.png
     - images/twitter.png
+    - images/Linkedin.png
+    - images/Twitter_2.png
     - images/home_line.png
     - images/nutrition.png
+    - images/rfg_logo.png
     - images/test.jpg
     - images/rfgg.png
     - images/hi.jpeg
