--- a/Flutter/website/pubspec.yaml
+++ b/Flutter/website/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  pdf: ^3.10.7
+  printing: ^5.11.1
 
 
   # The following adds the Cupertino Icons font to your application.
