--- a/Flask/requirements.txt
+++ b/Flask/requirements.txt
@@ -10,6 +10,7 @@ dash-table==5.0.0
 Flask==3.0.2
 Flask-Cors==4.0.1
 future==0.18.2
+gunicorn==23.0.0
 idna==3.6
 importlib_metadata==7.1.0
 itsdangerous==2.1.2
